--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 />
               </div>
       
-              <button id="submit" type="submit">Add Player</button>
+              <button type="submit">Add Player</button>
             </form>
             <ul id="player-list"></ul>
         </form>
